Added animations and create the Fixture Screen

--- a/app/src/main/res/layout/fragment_team_list.xml
+++ b/app/src/main/res/layout/fragment_team_list.xml
@@ -7,13 +7,40 @@
     tools:context=".UI.List.TeamListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="410dp"
-        android:layout_height="657dp"
+        android:id="@+id/teamRecycler"
+        android:layout_width="398dp"
+        android:layout_height="715dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <Button
+        android:id="@+id/drawFixtureButton"
+        android:layout_width="169dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="36dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#000000"
+        android:text="Draw Fixture"
+        android:textAllCaps="false"
+        android:textColor="#ffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/listToFixtureAnimation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/soccer"
+        app:lottie_repeatCount="0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
