--- a/app/src/main/res/layout/fragment_team_list.xml
+++ b/app/src/main/res/layout/fragment_team_list.xml
@@ -8,9 +8,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/teamRecycler"
-        android:layout_width="398dp"
-        android:layout_height="715dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="658dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/drawFixtureButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,17 +19,20 @@
 
     <Button
         android:id="@+id/drawFixtureButton"
-        android:layout_width="169dp"
-        android:layout_height="46dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="182dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="122dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#000000"
         android:text="Draw Fixture"
         android:textAllCaps="false"
         android:textColor="#ffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teamRecycler" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/listToFixtureAnimation"
