--- a/app/src/main/res/layout/item_fixture.xml
+++ b/app/src/main/res/layout/item_fixture.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/fixtureCardView"
     app:cardBackgroundColor="#F2F2F2"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
@@ -20,13 +21,13 @@
             android:id="@+id/home_team_name"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"
-            android:text="Home"
-            android:gravity="center"
-            android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft= "7dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="7dp"
+            android:gravity="center"
+            android:text="Home"
+            android:textColor="@android:color/black"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/versus"
