--- a/app/src/main/res/layout/fragment_team_list.xml
+++ b/app/src/main/res/layout/fragment_team_list.xml
@@ -21,8 +21,7 @@
         android:id="@+id/drawFixtureButton"
         android:layout_width="182dp"
         android:layout_height="42dp"
-        android:layout_marginStart="122dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_style"
         android:backgroundTint="#000000"
@@ -30,9 +29,24 @@
         android:textAllCaps="false"
         android:textColor="#ffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teamRecycler" />
+
+    <Button
+        android:id="@+id/changeTheme"
+        android:layout_width="182dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_style"
+        android:backgroundTint="#000000"
+        android:text="Change Theme"
+        android:textAllCaps="false"
+        android:textColor="#ffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teamRecycler"
+        app:layout_constraintVertical_bias="0.833" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/listToFixtureAnimation"
