--- a/app/src/main/res/layout/fragment_fixtures.xml
+++ b/app/src/main/res/layout/fragment_fixtures.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/week"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="178dp"
@@ -26,8 +26,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_fixture"
-        android:layout_width="408dp"
-        android:layout_height="674dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
