--- a/app/src/main/res/layout/fragment_fixtures.xml
+++ b/app/src/main/res/layout/fragment_fixtures.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="179dp"
         android:gravity="center"
         tools:text="Home"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorPrimary"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
